# vps-citizen

./: .gitignore  Makefile  README.md  cert.crt  cert.key  docker_runserver.sh  erd.bash  erd.py  graphviz_install.bat  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt
api/swagger/: swagger copy.yaml  swagger.yaml
docker/: Dockerfile.dev  entrypoint.sh
helpers/: file_system_manipulation.py  upload_file_name.py
ie_ecosystem/: asgi.py  settings.py  urls.py  wsgi.py
index/: urls.py  views.py
index/templates/: 403.html
swagger/: apps.py  urls.py  views.py
task_manager/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
task_manager/migrations/: 0001_initial.py  0002_alter_task_assigned_to_alter_task_created_at_and_more.py  0003_task_description.py  0004_alter_task_assigned_by.py  0005_alter_task_created_by.py  0006_remove_task_assigned_to_task_assigned_to.py  0007_task_supervised_by.py  0008_notification.py  0009_notification_type.py
templates/admin/: base_site.html
templates/rest_framework/: api.html
user/: forms.py  urls.py  views.py
vps/: admin.py  forms.py  middleware.py  models.py  urls.py  views.py
vps/migrations/: 0001_initial.py  0002_alter_country_name.py  0003_gender_alter_iprs_person_gender.py  0004_alter_iprs_person_id_no_and_more.py  0005_alter_iprs_person_middle_name.py  0006_alter_iprs_person_id_no_and_more.py  0007_alter_rank_name.py  0008_alter_policeofficer_iprs_person_and_more.py  0009_policeofficer_police_station.py  0010_alter_policeofficer_mug_shot.py  0011_occurrencecategoryinput.py  (+63 more)
(+149 files in other folders)
